tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/fail/Dockerfile.run.whitespace
FROM alpine:3.15
RUN TEST_123="456"        PYTHONHTTPSVERIFY=0  python example.py
RUN TEST_123='456'        PYTHONHTTPSVERIFY="0"  python example.py
RUN TEST_123=456        PYTHONHTTPSVERIFY='0'  python example.py

RUN TEST_123="456"        PYTHONHTTPSVERIFY=0      TEST="lol"    python example.py
RUN TEST_123='456'        PYTHONHTTPSVERIFY="0"    TEST="lol"    python example.py
RUN TEST_123=456          PYTHONHTTPSVERIFY='0'    TEST="lol"    python example.py

RUN PYTHONHTTPSVERIFY=0      TEST="lol"    python example.py
RUN PYTHONHTTPSVERIFY="0"    TEST="lol"    python example.py
RUN PYTHONHTTPSVERIFY='0'    TEST="lol"    python example.py
